# obs-enc-aomedia-av1

./: CMakeLists.txt  README.md
data/locale/: en-US.ini
source/: av1-encoder.cpp  av1-encoder.h  plugin.cpp  plugin.h  strings.h  version.h.in
